# kiutils-rs

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  flake.nix  justfile  release-plz.toml
.github/workflows/: mdbook.yml  release-plz.yml
crates/kiutils/: CHANGELOG.md  Cargo.toml
crates/kiutils/src/: lib.rs
crates/kiutils/tests/: public_api.rs
crates/kiutils_kicad/: CHANGELOG.md  Cargo.toml
crates/kiutils_kicad/examples/: dru_corpus_roundtrip.rs  dru_roundtrip.rs  footprint_roundtrip.rs  pcb_roundtrip.rs  read_all.rs  symlib_corpus_roundtrip.rs  symlib_roundtrip.rs  worksheet_corpus_roundtrip.rs  worksheet_roundtrip.rs
crates/kiutils_kicad/examples/data/: fp-lib-table  sample.kicad_dru  sample.kicad_mod  sample.kicad_pcb  sample.kicad_pro  sample.kicad_wks  sym-lib-table
crates/kiutils_kicad/src/: batch.rs  dru.rs  footprint.rs  kicad_project.rs  lib.rs  lib_table.rs  pcb.rs  project.rs  schematic.rs  sexpr_edit.rs  sexpr_utils.rs  symbol.rs  unknown.rs  validation.rs  version_diag.rs  worksheet.rs  write_mode.rs
crates/kiutils_kicad/tests/: inspect_cli.rs  integration.rs
crates/kiutils_kicad/tests/fixtures/: complex.kicad_pcb  hierarchical.kicad_sch  multi_unit_sym.kicad_sym  sample.kicad_sch  sub_sheet.kicad_sch  sym-lib-table  ~sample.kicad_pro.lck
crates/kiutils_sexpr/: CHANGELOG.md  Cargo.toml
crates/kiutils_sexpr/src/: lib.rs  parser.rs
docs/: book.toml
docs/src/: SUMMARY.md  agent-cookbook.md  api-reference.md  examples.md  formats.md  intro.md  quickstart.md  usage-patterns.md  verification.md
