[package]
name = "kiutils-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Public Rust-first KiCad API for lossless typed document IO"

[dependencies]
kiutils_kicad = { version = "0.1.0", path = "../kiutils_kicad" }

[features]
default = []
serde = ["kiutils_kicad/serde"]
parallel = ["kiutils_kicad/parallel"]
