[package]
name = "kiutils-rs"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Pure-Rust KiCad API for seamless, lossless S-expression document round-trips"
documentation = "https://docs.rs/kiutils-rs"
keywords = ["kicad", "s-expression", "parser", "eda", "lossless"]
categories = ["development-tools", "api-bindings", "parser-implementations"]

[dependencies]
kiutils_kicad = { package = "kiutils_kicad", version = "0.2.0", path = "../kiutils_kicad" }

[features]
default = []
serde = ["kiutils_kicad/serde"]
parallel = ["kiutils_kicad/parallel"]
