[package]
name = "kiutils_kicad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "KiCad typed AST and file codecs built on kiutils_sexpr"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
kiutils_sexpr = { version = "0.1.0", path = "../kiutils_sexpr" }
serde = { workspace = true, optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = []
serde = ["dep:serde", "kiutils_sexpr/serde"]
parallel = ["dep:rayon"]
