[package]
name = "kiutils_sexpr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

authors = ["Milind Sharma"]
description = "Lossless S-expression CST parser/printer for KiCad and EDA source files"
documentation = "https://docs.rs/kiutils_sexpr"
keywords = ["kicad", "s-expression", "parser", "eda", "lossless"]
categories = ["parser-implementations", "development-tools", "encoding"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["lossless"]
lossless = []
serde = ["dep:serde"]
